--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "css-loader": "^5.2.4",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
