--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "core-js": "^3.6.5",
     "css-loader": "^5.2.4",
     "vue": "^3.0.0",
+    "vue-i18n": "^8.24.4",
     "vue-router": "^4.0.0-0"
   },
   "devDependencies": {
